# rust-plist

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  search-index.js
.github/workflows/: build-and-test.yml  ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ascii_reader.rs  binary_reader.rs  xml_reader.rs
fuzz/fuzzers/: binary_reader.rs  xml_reader.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/plist/: trait.EventWriter.js
implementors/serde/de/: trait.Deserializer.js  trait.Error.js  trait.VariantVisitor.js
implementors/serde/ser/: trait.Error.js  (+1 more)
plist/: EventWriter.t.html  Plist.t.html  PlistEvent.t.html  enum.Error.html  enum.Plist.html  enum.PlistEvent.html  fn.deserialize.html  fn.serialize_to_xml.html  index.html  serialize_to_xml.v.html  sidebar-items.js  struct.Deserializer.html  struct.EventReader.html  struct.Serializer.html  trait.EventWriter.html  type.Result.html
plist/binary/: index.html  sidebar-items.js  struct.EventReader.html
plist/de/: struct.Deserializer.html
plist/ser/: struct.Serializer.html
plist/xml/: index.html  sidebar-items.js  struct.EventReader.html  struct.EventWriter.html
src/: binary.rs  builder.rs  data.rs  date.rs  de.rs  dictionary.rs  error.rs  integer.rs  lib.rs  macros.rs  plist.rs  reader.rs  ser.rs  serde_tests.rs  uid.rs  value.rs  xml.rs
src/binary/: mod.rs  reader.rs
src/events/: binary_reader.rs  mod.rs  xml_reader.rs  xml_writer.rs
src/serde/: de.rs  mod.rs  ser.rs
src/stream/: ascii_reader.rs  binary_reader.rs  binary_writer.rs  mod.rs  quick_xml_reader.rs  quick_xml_writer.rs  xml_reader.rs  xml_writer.rs
src/xml/: mod.rs  reader.rs  writer.rs
tests/: fuzzer.rs  macros.rs  serde_tests.rs.in  tests.rs
tests/data/: ascii-animals.plist  binary.plist  binary_three_byte_integer_offset_table.plist  book.plist  netbsd_xml.plist  simple.plist  utf16_bplist.plist  xml.plist  xml_entity_error.plist  xml_error.plist
tests/expand/: dict.expanded.rs  dict.rs
tests/serde_/: mod.rs
tests/serde_tests/: mod.rs
tests/ui/: missing_colon.rs  missing_colon.stderr  missing_comma.rs  missing_comma.stderr  missing_value.rs  missing_value.stderr  not_found.rs  not_found.stderr  parse_expr.rs  parse_expr.stderr  parse_key.rs  parse_key.stderr  unexpected_after_array_element.rs  unexpected_after_array_element.stderr  unexpected_after_map_entry.rs  unexpected_after_map_entry.stderr  unexpected_colon.rs  unexpected_colon.stderr  unexpected_comma.rs  unexpected_comma.stderr
(+14 files in other folders)
