[package]
name = "gd_plist"
version = "1.4.1"
authors = ["Ed Barnard <eabarnard@gmail.com>", "Syudagye <syudagye@gmail.com>"]
description = "A rusty plist parser for Geometry Dash's plist format"
license = "MIT"
repository = "https://github.com/ebarnard/rust-plist/"
documentation = "https://docs.rs/plist/1.4.1/plist/"
keywords = ["plist", "parser"]
categories = ["config", "encoding", "parser-implementations"]
edition = "2021"
rust-version = "1.59"

[features]
default = ["serde"]
enable_unstable_features_that_may_break_with_minor_version_bumps = []

[dependencies]
base64 = "0.13.0"
time = { version = "0.3.3", features = ["parsing", "formatting"] }
indexmap = "1.0.2"
line-wrap = "0.1.1"
quick_xml = { package = "quick-xml", version = "0.26.0" }
serde = { version = "1.0.2", optional = true }

[dev-dependencies]
serde_derive = { version = "1.0.2" }
serde_yaml = "0.8.21"
