[package]
name = "plist"
version = "1.4.3"
authors = ["Ed Barnard <eabarnard@gmail.com>"]
description = "A rusty plist parser. Supports Serde serialization."
license = "MIT"
repository = "https://github.com/ebarnard/rust-plist/"
documentation = "https://docs.rs/plist/1.4.3/plist/"
keywords = ["plist", "parser"]
categories = ["config", "encoding", "parser-implementations"]
edition = "2021"
rust-version = "1.59"

[features]
default = ["serde"]
enable_unstable_features_that_may_break_with_minor_version_bumps = []

[dependencies]
base64 = "0.21.0"
time = { version = "0.3.20", features = ["parsing", "formatting"] }
indexmap = "1.9.3"
line-wrap = "0.1.1"
quick-xml = "0.28.1"
serde = { version = "1.0.159", features = ["derive"], optional = true }

[dev-dependencies]
serde_yaml = "0.9.19"
